# ha-loca

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.1.1-alpha.1.md  hacs.json  mypy.ini  pyproject.toml  pytest.ini  requirements_test.txt  services.yaml  test_api.py  validate_hacs_complete.py  validate_hacs_compliance.py  validate_platinum.py  validate_test_coverage.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  hacs.yml  hassfest.yml  publish.yml  stale.yml
custom_components/loca/: __init__.py  api.py  base.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  error_handling.py  icons.json  manifest.json  quality_scale.yaml  repairs.py  sensor.py  services.py  services.yaml  types.py  validation.py
custom_components/loca/translations/: de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt.json  sv.json
scripts/: run_tests.sh
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_diagnostics.py  test_error_handling.py  test_init.py  test_repairs.py  test_sensor.py  test_services.py  test_validation.py
