[project]
name = "loca"
version = "1.1.6"
description = "Home Assistant integration for Loca GPS device tracking"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "steynovich", email = ""}
]
keywords = ["home-assistant", "loca", "gps-tracking", "device-tracker"]

[tool.ruff]
target-version = "py313"
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and other useful rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented code)
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
]

# Ignore only essential rules that conflict with Home Assistant patterns
ignore = [
    # Home Assistant naming conventions
    "N802",    # Function name should be lowercase (HA uses async_*)
    "N803",    # Argument name should be lowercase (HA uses hass, etc.)
    "N806",    # Variable in function should be lowercase
    "N818",    # Exception naming (CannotConnect, InvalidAuth are HA conventions)

    # Home Assistant callback patterns
    "ARG001",  # Unused function argument (common in HA callbacks)
    "ARG002",  # Unused method argument (common in HA callbacks)
    "ARG004",  # Unused static method argument (required by HA API)

    # Formatter handles this
    "E501",    # Line too long (handled by ruff format)

    # Home Assistant code patterns
    "TID252",  # Relative imports (Home Assistant uses them)
    "RUF012",  # Mutable class attributes (const.py data containers)
    "UP047",   # Generic type parameter syntax (keep for compatibility)

    # Type-checking blocks (HA doesn't require runtime TYPE_CHECKING optimization)
    "TC001",   # Move application imports into type-checking block
    "TC002",   # Move third-party imports into type-checking block
    "TC003",   # Move standard library imports into type-checking block

    # Complexity rules (HA integrations have complex logic)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic values (sensor thresholds are clear in context)

    # Style preferences for readability
    "SIM102",  # Nested if statements (clearer when separated)
    "SIM117",  # Nested with statements (clearer in tests)
    "B017",    # pytest.raises Exception (intentional for schema validation tests)
]

[tool.ruff.lint.per-file-ignores]
# Tests can have additional flexibility
"tests/*" = [
    "PLR2004", # Magic values in tests are fine
    "S101",    # Use of assert
    "ARG",     # Unused arguments in fixtures
    "PTH",     # Path operations
    "PLC0415", # Imports not at top-level (common in test-specific imports)
    "DTZ001",  # datetime() without tzinfo (acceptable in tests)
    "DTZ005",  # datetime.now() without tz (acceptable in tests)
    "UP043",   # Unnecessary type arguments in tests
]

# Allow imports from tests in conftest
"tests/conftest.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
# Home Assistant import grouping
force-sort-within-sections = true
known-first-party = ["custom_components.loca"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use Unix line endings
line-ending = "lf"
# Magic trailing comma
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["attr-defined", "name-defined"]
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_return_any = true
warn_unreachable = true
strict_optional = true

# Ignore missing imports for external packages
[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "homeassistant.*",
    "voluptuous.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", ".venv", "venv", "dist", "build", "__pycache__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=custom_components.loca",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["custom_components.loca"]
omit = [
    "tests/*",
    "custom_components/loca/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if 0:",
    "if False:",
    "@abstractmethod",
]
