[project]
name = "loca"
version = "2.0.0"
description = "Home Assistant integration for Loca GPS device tracking"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "steynovich", email = ""}
]
keywords = ["home-assistant", "loca", "gps-tracking", "device-tracker"]

[tool.ruff]
target-version = "py314"
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and other useful rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented code)
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
    "C901", # McCabe complexity (paired with mccabe max-complexity below)
]

# Ignore only essential rules that conflict with Home Assistant patterns
ignore = [
    # Home Assistant naming conventions
    "N802",    # Function name should be lowercase (HA uses async_*)
    "N803",    # Argument name should be lowercase (HA uses hass, etc.)
    "N806",    # Variable in function should be lowercase
    "N818",    # Exception naming (CannotConnect, InvalidAuth are HA conventions)

    # Home Assistant callback patterns
    "ARG001",  # Unused function argument (common in HA callbacks)
    "ARG002",  # Unused method argument (common in HA callbacks)
    "ARG004",  # Unused static method argument (required by HA API)

    # Formatter handles this
    "E501",    # Line too long (handled by ruff format)

    # Home Assistant code patterns
    "TID252",  # Relative imports (Home Assistant uses them)
    "RUF012",  # Mutable class attributes (const.py data containers)
    "UP047",   # Generic type parameter syntax (keep for compatibility)

    # Type-checking blocks (HA doesn't require runtime TYPE_CHECKING optimization)
    "TC001",   # Move application imports into type-checking block
    "TC002",   # Move third-party imports into type-checking block
    "TC003",   # Move standard library imports into type-checking block

    # Complexity rules (HA integrations have complex logic)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic values (sensor thresholds are clear in context)

    # Style preferences for readability
    "SIM102",  # Nested if statements (clearer when separated)
    "SIM117",  # Nested with statements (clearer in tests)
    "B017",    # pytest.raises Exception (intentional for schema validation tests)
]

[tool.ruff.lint.per-file-ignores]
# Tests can have additional flexibility
"tests/*" = [
    "PLR2004", # Magic values in tests are fine
    "S101",    # Use of assert
    "ARG",     # Unused arguments in fixtures
    "PTH",     # Path operations
    "PLC0415", # Imports not at top-level (common in test-specific imports)
    "DTZ001",  # datetime() without tzinfo (acceptable in tests)
    "DTZ005",  # datetime.now() without tz (acceptable in tests)
    "UP043",   # Unnecessary type arguments in tests
]

# Allow imports from tests in conftest
"tests/conftest.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
# Home Assistant import grouping
force-sort-within-sections = true
known-first-party = ["custom_components.loca"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.mccabe]
# Ratchet: keeps new functions simple. Raise deliberately if a case justifies it.
max-complexity = 10

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use Unix line endings
line-ending = "lf"
# Magic trailing comma
skip-magic-trailing-comma = false

[tool.ty.environment]
# Pin ty's Python version so PEP 758 (unparenthesized `except E1, E2:`) is
# accepted and homeassistant imports resolve from the project venv.
python-version = "3.14"
python = ".venv"

[tool.mypy]
# Settings match what was previously in mypy.ini (the effective config).
# Tightening these is a separate follow-up.
python_version = "3.14"
show_error_codes = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
explicit_package_bases = true

# Ignore missing imports for external packages that lack type stubs.
[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "homeassistant.*",
    "voluptuous.*",
    "pytest.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", ".venv", "venv", "dist", "build", "__pycache__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-p",
    "no:threadexception",
    "--cov=custom_components.loca",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "skip_teardown_check: marks tests that have known teardown issues",
]

[tool.coverage.run]
source = ["custom_components.loca"]
omit = [
    "tests/*",
    "custom_components/loca/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if 0:",
    "if False:",
    "@abstractmethod",
]
